name:                reeves
version:             0.1.0.0
synopsis:            Shell scripting helper
description:         Please see README.md
homepage:            https://github.com/githubuser/reeves#readme
license:             BSD3
license-file:        LICENSE
author:              Scott Fleischman
maintainer:          scott-fleischman@users.noreply.github.com
copyright:           2017 Scott Fleischman
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable reeves
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base
    , text
    , aeson
    , bytestring
    , unordered-containers
